# Veille

./: .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
demos/veille-demo-agent/: README.md  pyproject.toml
demos/veille-demo-agent/veille_demo_agent/: __main__.py  agent.py  main.py
docs/: AI_DEVELOPER_MASTER_PROMPT.md  AI_RUNTIME_SUPERVISOR_BLUEPRINT.md  adoption-foundation.md  architecture.md  assumptions.md  data-contracts.md  evaluation.md  integrations.md  launch-drafts.md  operations.md  phase-8-demo.md  pilot-integration-checklist.md  policy-engine.md  real-world-adoption.md  roadmap-to-adoption.md  roadmap.md  runtime-chain.md  security-and-privacy.md  todo.md
docs/adr/: 001-langgraph-first-adapter.md  002-normalized-event-schema.md  003-mock-first-litellm.md  004-langgraph-callback-instrumentation.md  005-otel-event-mapping.md  006-enforcement-model.md  007-budget-backend-port.md  008-plan-tier-cost-model.md  009-model-routing.md  010-semantic-dedup-caching.md  011-memory-governance.md  012-cache-policy.md  013-local-integration-console.md  014-preflight-proposal-boundary.md  015-approved-preflight-execution.md
docs/design-partner-feedback/: README.md  capture-template.md  system-signals.md
docs/development/: PREFLIGHT_SUPERVISOR_DELIVERY_PLAN.md  phase-1-plan.md  phase-2-plan.md  phase-3-plan.md  phase-4-plan.md  phase-5-plan.md
docs/guides/: langgraph-preflight.md  litellm-integration.md  local-daemon.md  mock-demo.md  openai-agents-sdk.md  openrouter-setup.md  real-provider-setup.md  safe-local-setup.md
docs/release-notes/: 0.2.0.md
examples/cited_market_research/: __init__.py  agent.py  mock_tools.py  task_contract.yaml  trace_capture.py
examples/langgraph_demo/: __init__.py  agent.py
examples/real_openai_agent/: __init__.py  agent.py
examples/real_world_demo/: __init__.py  agent.py  api.py
fixtures/traces/: 167807b5-9d6c-4627-b52a-dbba35318df7.json  20a70cb8-e85c-40aa-be1a-170df0c18443.json  2881dd90-5e06-40cd-884d-96e7c2ef2398.json  2e3c7955-59f0-461f-b6d6-11ec2f0b9e55.json  42ecaba2-3cfd-4be8-aa54-3cbd4769f765.json  52734f1c-7253-497a-90e6-59b25ad09d89.json  expensive_run.json  failed_validation_run.json  success_run.json
integrations/vscode/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json
scripts/: design_partner_demo.py  dev.ps1  install.ps1  install.sh
src/supervisor/: __init__.py  _provider_util.py  cli.py  daemon.py  io.py  preflight.py
src/veille/: __init__.py
templates/: baseline_report.md
tests/: test_daemon.py  test_io.py
ui/: index.html  package-lock.json  package.json
(+128 files in other folders)
