[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "veille-supervisor"
version = "0.3.3"
description = "Control plane for production AI-agent work: plan, govern, and verify agent runs."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "AI Runtime Supervisor Team" }]
keywords = ["ai", "agents", "control-plane", "llm", "supervisor", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.6,<3",
    "pyyaml>=6.0,<7",
    "langgraph>=0.2,<1",
    "langchain-core>=0.3,<1",
]

[project.urls]
Homepage = "https://github.com/Raphel6969/Veille"
Repository = "https://github.com/Raphel6969/Veille"
Documentation = "https://github.com/Raphel6969/Veille/tree/main/docs"
Issues = "https://github.com/Raphel6969/Veille/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
    "types-PyYAML>=6.0,<7",
]
litellm = [
    "litellm>=1.55,<2",
]
ui = [
    "fastapi>=0.110,<1",
    "uvicorn>=0.30,<1",
]
postgres = [
    "psycopg[binary]>=3.2,<4",
]

[project.scripts]
veille = "supervisor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/supervisor", "src/veille", "examples"]
force-include = { "ui/dist" = "supervisor/console/ui" }

[tool.hatch.build.targets.sdist]
artifacts = ["ui/dist/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["supervisor"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["langgraph.*", "langchain_core.*", "opentelemetry.*", "litellm.*", "psycopg.*"]
ignore_missing_imports = true
